--- a/stm32f0/projects/stm32f0/stm32f0.uvprojx
+++ b/stm32f0/projects/stm32f0/stm32f0.uvprojx
@@ -401,6 +401,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\EBYTE.c</FilePath>
             </File>
+            <File>
+              <FileName>serial.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\serial.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
