--- a/stm32f0/projects/stm32f0/stm32f0.uvprojx
+++ b/stm32f0/projects/stm32f0/stm32f0.uvprojx
@@ -397,9 +397,9 @@
               <FilePath>.\src\usart.c</FilePath>
             </File>
             <File>
-              <FileName>DS18B20.c</FileName>
+              <FileName>lm35.c</FileName>
               <FileType>1</FileType>
-              <FilePath>.\src\DS18B20.c</FilePath>
+              <FilePath>.\src\lm35.c</FilePath>
             </File>
           </Files>
         </Group>
@@ -455,6 +455,11 @@
               <FileName>stm32f0xx_spi.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\libraries\STM32F0xx_StdPeriph_Driver\src\stm32f0xx_spi.c</FilePath>
+            </File>
+            <File>
+              <FileName>stm32f0xx_adc.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\libraries\STM32F0xx_StdPeriph_Driver\src\stm32f0xx_adc.c</FilePath>
             </File>
           </Files>
         </Group>
