--- a/stm32f0/projects/stm32f0/stm32f0.uvprojx
+++ b/stm32f0/projects/stm32f0/stm32f0.uvprojx
@@ -467,6 +467,11 @@
               <FileType>1</FileType>
               <FilePath>.\src\serial.c</FilePath>
             </File>
+            <File>
+              <FileName>lm35.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\lm35.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1066,6 +1071,11 @@
               <FileName>serial.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\serial.c</FilePath>
+            </File>
+            <File>
+              <FileName>lm35.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\src\lm35.c</FilePath>
             </File>
           </Files>
         </Group>
