--- a/stm32f0/projects/stm32f0/stm32f0.uvprojx
+++ b/stm32f0/projects/stm32f0/stm32f0.uvprojx
@@ -337,7 +337,7 @@
               <MiscControls></MiscControls>
               <Define>USE_STDPERIPH_DRIVER, STM32F0XX</Define>
               <Undefine></Undefine>
-              <IncludePath>.\inc;..\..\libraries\CMSIS\Include;..\..\libraries\CMSIS\ST\STM32F0xx\Include;..\..\libraries\STM32F0xx_StdPeriph_Driver\inc;..\..\utilities\STM32F0-Discovery;D:\OneDrive\OneDrive - Windesheim Office365\Jaar 3\Semester 2\Periode 3\KBS IoT\Libraries</IncludePath>
+              <IncludePath>.\inc;..\..\libraries\CMSIS\Include;..\..\libraries\CMSIS\ST\STM32F0xx\Include;..\..\libraries\STM32F0xx_StdPeriph_Driver\inc;..\..\utilities\STM32F0-Discovery;D:\OneDrive\OneDrive - Windesheim Office365\Jaar 3\Semester 2\Periode 3\KBS IoT\Libraries;.\inc</IncludePath>
             </VariousControls>
           </Cads>
           <Aads>
