--- a/stm32f0/projects/stm32f0/stm32f0.uvprojx
+++ b/stm32f0/projects/stm32f0/stm32f0.uvprojx
@@ -482,6 +482,16 @@
               <FileType>1</FileType>
               <FilePath>.\src\se24lc512.c</FilePath>
             </File>
+            <File>
+              <FileName>transmitter_id.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\transmitter_id.c</FilePath>
+            </File>
+            <File>
+              <FileName>transmission_led.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\transmission_led.c</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1096,6 +1106,16 @@
               <FileName>se24lc512.c</FileName>
               <FileType>1</FileType>
               <FilePath>.\src\se24lc512.c</FilePath>
+            </File>
+            <File>
+              <FileName>transmitter_id.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\transmitter_id.c</FilePath>
+            </File>
+            <File>
+              <FileName>transmission_led.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>.\transmission_led.c</FilePath>
             </File>
           </Files>
         </Group>
